# raffle-backoffice

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  agents.md  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
apps/appointments/: admin.py  api_views.py  models.py  serializers.py  urls.py
apps/appointments/migrations/: 0001_initial.py
apps/appointments/services/: availability.py  bookings.py
apps/core/: admin.py  middleware.py  models.py
apps/core/migrations/: 0001_initial.py  0002_create_default_tenant.py
apps/payments/: admin.py  models.py
apps/payments/migrations/: 0001_initial.py
apps/payments/services/: bancard.py
apps/raffles/: __init__.py  admin.py  api_views.py  apps.py  models.py  serializers.py  signals.py  urls.py
apps/raffles/migrations/: 0001_initial.py  0002_alter_order_options_alter_orderticket_options_and_more.py  0003_set_default_tenant.py  0004_alter_order_tenant_alter_raffle_tenant_and_more.py
apps/raffles/services/: __init__.py  reservations.py
apps/whatsapp/: __init__.py  admin.py  api_urls.py  api_views.py  models.py  serializers.py  urls.py  views.py
apps/whatsapp/migrations/: 0001_initial.py  0002_alter_inboundmessage_options_and_more.py  0003_set_default_tenant.py  0004_alter_whatsappcontact_tenant_and_more.py
apps/whatsapp/services/: __init__.py  flow.py  messages_es.py  meta_client.py  security.py
core/: admin.py  settings.py  urls.py
docs/: I18N_AND_API_DOCS.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  WHATS_NEW.md
templates/admin/: index.html
(+3 files in other folders)
